@@ -134,7 +134,7 @@ function invoice_buyer($x,$y)
     global $invoice,$pdf;
     $font_size=10;
     $y=$y-text_align_left($x,$y,$font_size,'<b>'.iconv("UTF-8","ISO-8859-2",trans('Purchaser:')).'</b>');
-    $y=$y-text_align_left($x,$y,$font_size,iconv("UTF-8","ISO-8859-2",$invoice['name']));
+    $y=text_wrap($x,$y,350,$font_size,iconv("UTF-8","ISO-8859-2",$invoice['name']),'left');
     $y=$y-text_align_left($x,$y,$font_size,iconv("UTF-8","ISO-8859-2",$invoice['address']));
     $y=$y-text_align_left($x,$y,$font_size,iconv("UTF-8","ISO-8859-2",$invoice['zip']." ".$invoice['city']));
     if ($invoice['ten']) 
@@ -188,11 +188,14 @@ function invoice_address_box($x,$y)
 {
     global $invoice,$pdf;
     $font_size=12;
+/*
     $invoice_name = $invoice['name'];
     if (strlen($invoice_name)>25) 
         $invoice_name = preg_replace('/(.{25})/',"$1<i>&gt;</i>\n",$invoice_name);
     $tmp = explode("\n",iconv("UTF-8","ISO-8859-2",$invoice_name));
     foreach ($tmp as $line) $y=$y-text_align_left($x,$y,$font_size,"<b>".$line."</b>");
+*/
+    $y = text_wrap($x, $y, 160, $font_size, iconv("UTF-8","ISO-8859-2",$invoice['name']), 'left');
     if ($invoice['serviceaddr']) {
 	$tmp = explode("\n",iconv("UTF-8","ISO-8859-2",$invoice['serviceaddr']));
 	foreach ($tmp as $line) $y=$y-text_align_left($x,$y,$font_size,"<b>".$line."</b>");
