@@ -12,6 +12,7 @@ version ? (????-??-??):
   - lmsd/parser: multiple logical expressions ("a && b && c" etc.) 
     supported, multiple instructions in one block supported - using
     semicolon (alec)
+  - few fixes for very long customer names on pdf invoices and UI (alec)
 
 version 1.7.6 Grannus (2005-11-10):
 
